# AutoPyBind11_Example

./: CMakeLists.txt  README.md
CMake/: GetAutoPybind11.cmake
test/: stl.hpp  stl_binders.hpp  stl_opaque.hpp  sub_modules.hpp
wrappers/: stl_binders_wrapper.yml  stl_opaque_wrapper.yml
